Reflection Plane - "Radius" option doesn't work #59928

Closed
opened 2018-12-28 16:34:46 +01:00 by Marcin Twarowski · 3 comments

Win 10, GTX 1080
Blender 2.80, 2018-12-28 11:37, a4e4d9f0ab

When you add new "Light Probe" -> "Reflection Plane", there is an option to change radius. It doesn't do anything. Also, is "Radius" the best word since the plane is square?

reflection_plane_radius_bug.png

Edit: In fact all light probes have the same problem.

Win 10, GTX 1080 Blender 2.80, 2018-12-28 11:37, a4e4d9f0ab89 When you add new "Light Probe" -> "Reflection Plane", there is an option to change radius. It doesn't do anything. Also, is "Radius" the best word since the plane is square? ![reflection_plane_radius_bug.png](https://archive.blender.org/developer/F6097967/reflection_plane_radius_bug.png) Edit: In fact all light probes have the same problem.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Campbell Barton was assigned by Sebastian Parborg 2019-01-24 13:15:17 +01:00

This issue was referenced by 1f8738a398

This issue was referenced by 1f8738a39847165b0ec5ac494de91a734e02b878
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59928
No description provided.