Fix T59928: 'Radius' option does nothing when adding light probe